--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Intern-DDi"
+title                    : "INTERN"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "G.H.Lee, D.Y.Won, S.J.Son"
@@ -101,11 +101,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "저자이름?"
+  name             : "G.H.Lee, D.Y.Won, S.J.Son"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "저자 바이오?"
+  bio              : "Y-17"
   location         : "Seoul, Korea"
-  email            : gh003008@naver.com, wdy0308@yonsei.ac.kr, pirateson@yonsei.ac.kr
+  email            : gh003008@yonsei.ac.kr, wdy0308@yonsei.ac.kr, pirateson@yonsei.ac.kr
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
