--- a/_config.yml
+++ b/_config.yml
@@ -283,8 +283,8 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
+      sidebar_main: true
+      read_time: false
       comments: # true
       share: true
       related: true
-      sidebar_main: true
