--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name             : "S.J.SON"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/images/zzam.jpg"
   bio              : "Mechanical Engineering"
   location         : "Seoul, Korea"
   email            : pirateson@yonsei.ac.kr
