--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ analytics:
 # Site Author
 author:
   name             : "S.J.SON"
-  avatar           : "/assets/images/zam.jpeg"
+  avatar           : "/assets/images/realzzam.jpeg"
   bio              : "Mechanical Engineering"
   location         : "Seoul, Korea"
   email            : pirateson@yonsei.ac.kr
